codepkg/objects/Report_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Base_Object_API_NAME__c</fullName>
        <label>Base Object API NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Report_URL__c</fullName>
        <label>Custom Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMA</fullName>
                    <default>true</default>
                    <label>HMA</label>
                </value>
                <value>
                    <fullName>PHOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Date_Field_API__c</fullName>
        <label>Order Date Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Help_Text__c</fullName>
        <label>Report Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To_Location_Field_API_Name__c</fullName>
        <label>Ship To Location Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Report Config</label>
    <pluralLabel>Report Configs</pluralLabel>
</CustomObject>